feat:
Update test suite with new tests